apps/jaeger/base/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jaeger-policy
  namespace: jaeger
spec:
  selector:
    matchLabels:
      app: kiali
  action: DENY
  rules:
    - to:
        - operation:
            methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
      when:
        - key: request.headers[x-envoy-external-address]
          notValues:
            - "46.7.164.99" # Analect
